tests/fa/errors/while_not_bool_fa.salam
// EXPECT: خطا۰۲۱
// LANG: fa
تابع اصلی:
    تاوقتی 5:
        چاپ "x"
    پایان
پایان
